--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@google/generative-ai": "latest",
         "@hookform/resolvers": "latest",
         "@radix-ui/react-accordion": "^1.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -38,36 +39,39 @@
         "@radix-ui/react-toggle-group": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
         "autoprefixer": "^10.4.20",
+        "axios": "latest",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.4",
+        "cors": "latest",
         "date-fns": "3.0.0",
+        "dotenv": "latest",
         "embla-carousel-react": "8.5.1",
+        "express": "latest",
+        "firebase": "latest",
+        "firebase-admin": "latest",
+        "helmet": "latest",
         "input-otp": "1.4.1",
         "lucide-react": "^0.454.0",
+        "mongoose": "latest",
+        "morgan": "latest",
         "next": "15.1.0",
         "next-themes": "latest",
         "react": "18.2.0",
         "react-day-picker": "8.10.1",
         "react-dom": "18.2.0",
         "react-hook-form": "latest",
+        "react-hot-toast": "^2.5.2",
+        "react-markdown": "^10.1.0",
         "react-resizable-panels": "^2.1.7",
         "recharts": "2.15.0",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.1",
         "sonner": "latest",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.6",
-        "zod": "latest",
-        "firebase": "latest",
-        "axios": "latest",
-        "express": "latest",
-        "cors": "latest",
-        "helmet": "latest",
-        "morgan": "latest",
-        "dotenv": "latest",
-        "mongoose": "latest",
-        "firebase-admin": "latest",
-        "@google/generative-ai": "latest"
+        "zod": "latest"
     },
     "devDependencies": {
         "@types/node": "^22",
