--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,12 @@
         "express": "^4.18.2",
         "firebase-admin": "^11.11.0",
         "helmet": "^7.1.0",
+        "marked": "^15.0.7",
         "mongoose": "^8.0.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "react-hot-toast": "^2.5.2",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
