--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "clsx": "^2.1.1",
         "cmdk": "1.0.4",
         "cors": "latest",
-        "date-fns": "3.0.0",
+        "date-fns": "^3.0.0",
         "dotenv": "latest",
         "embla-carousel-react": "8.5.1",
         "express": "latest",
