--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,7 @@
         "marked": "^15.0.7",
         "mongoose": "^8.0.1",
         "morgan": "^1.10.0",
-        "react-hot-toast": "^2.5.2",
-        "remark-breaks": "^4.0.0",
-        "remark-gfm": "^4.0.1"
+        "react-hot-toast": "^2.5.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
