--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "express": "^4.18.2",
         "firebase-admin": "^11.11.0",
         "helmet": "^7.1.0",
+        "ioredis": "^5.6.0",
         "marked": "^15.0.7",
         "mongoose": "^8.0.1",
         "morgan": "^1.10.0",
