--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -3,7 +3,7 @@ name: Deploy Lambda Function
 on:
   push:
     branches:
-      - master  # Change to your deployment branch
+      - master  # Change if needed
 
 jobs:
   deploy:
@@ -15,21 +15,27 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+          sudo apt update
+          sudo apt install -y curl unzip
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version  # Verify installation
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # Change to your AWS region
+      - name: Install Dependencies
+        run: |
+          cd server  # Move to server folder
+          npm ci  # Install dependencies
+          ls -lh node_modules  # Check if installed
 
       - name: Zip Lambda Function
-        run: zip -r function.zip index.js node_modules  # Modify for your language
+        run: |
+          cd server  # Move to server folder
+          zip -r ../function.zip .  # Zip everything inside ./server
+          ls -lh ../function.zip  # Check zip file size
 
       - name: Deploy to AWS Lambda
         run: |
           aws lambda update-function-code \
-            --function-name myLambdaFunction \  # Change to your Lambda function name
+            --function-name myLambdaFunction \  # Change this
             --zip-file fileb://function.zip
