--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -13,14 +13,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Install AWS CLI
+      - name: Update AWS CLI
         run: |
-          sudo apt update
-          sudo apt install -y curl unzip
+          sudo /usr/local/aws-cli/v2/current/bin/aws --version || true  # Check current version
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-          aws --version  # Verify installation
+          unzip -o awscliv2.zip
+          sudo ./aws/install --update
+          aws --version  # Verify updated version
 
       - name: Install Dependencies
         run: |
