--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Deploy to AWS Lambda
         run: |
           aws lambda update-function-code \
-            --function-name myLambdaFunction \  # Change this
+            --function-name myLambdaFunction \  # Change this to your actual function name
             --zip-file fileb://function.zip
