--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -15,11 +15,18 @@ jobs:
 
       - name: Update AWS CLI
         run: |
-          sudo /usr/local/aws-cli/v2/current/bin/aws --version || true  # Check current version
+          aws --version || true  # Check current version
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip -o awscliv2.zip
           sudo ./aws/install --update
           aws --version  # Verify updated version
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1  # Change to Mumbai region
 
       - name: Install Dependencies
         run: |
@@ -32,12 +39,12 @@ jobs:
           cd server  # Move to server folder
           zip -r ../function.zip .  # Zip everything inside ./server
           ls -lh ../function.zip  # Check zip file size
-          
+
       - name: Debug AWS Credentials
         run: aws sts get-caller-identity
 
       - name: Deploy to AWS Lambda
         run: |
           aws lambda update-function-code \
-            --function-name myLambdaFunction \  # Change this to your actual function name
+            --function-name myLambdaFunction \
             --zip-file fileb://function.zip
