--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-collapsible": "^1.1.2",
         "@radix-ui/react-context-menu": "^2.2.4",
-        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-dialog": "^1.0.4",
         "@radix-ui/react-dropdown-menu": "^2.1.4",
         "@radix-ui/react-hover-card": "^1.1.4",
         "@radix-ui/react-label": "^2.1.1",
@@ -38,11 +38,10 @@
         "@radix-ui/react-toggle": "^1.1.1",
         "@radix-ui/react-toggle-group": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
-        "autoprefixer": "^10.4.20",
         "axios": "latest",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "cmdk": "1.0.4",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "cmdk": "^1.0.0",
         "cors": "latest",
         "date-fns": "^3.0.0",
         "dotenv": "latest",
@@ -50,26 +49,28 @@
         "express": "latest",
         "firebase": "latest",
         "firebase-admin": "latest",
-        "framer-motion": "^12.5.0",
+        "framer-motion": "^10.16.4",
         "helmet": "latest",
         "input-otp": "1.4.1",
-        "lucide-react": "^0.454.0",
+        "lucide-react": "^0.284.0",
         "mongoose": "latest",
         "morgan": "latest",
-        "next": "15.1.0",
+        "next": "^14.0.0",
         "next-themes": "latest",
-        "react": "18.2.0",
+        "react": "^18.2.0",
         "react-day-picker": "8.10.1",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.2.0",
         "react-hook-form": "latest",
         "react-hot-toast": "^2.5.2",
         "react-markdown": "^10.1.0",
+        "react-quill": "^2.0.0",
         "react-resizable-panels": "^2.1.7",
         "recharts": "2.15.0",
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.1",
+        "rich-text-editor": "^8.2.5-0",
         "sonner": "latest",
-        "tailwind-merge": "^2.5.5",
+        "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.6",
         "zod": "latest"
@@ -78,7 +79,8 @@
         "@types/node": "^22",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "postcss": "^8",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
     }
