--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,20 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.1.3",
+        "aws-serverless-express": "^3.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "firebase-admin": "^11.11.0",
         "helmet": "^7.1.0",
+        "install": "^0.13.0",
         "ioredis": "^5.6.0",
         "marked": "^15.0.7",
         "mongoose": "^8.0.1",
         "morgan": "^1.10.0",
-        "react-hot-toast": "^2.5.2"
+        "npm": "^11.2.0",
+        "react-hot-toast": "^2.5.2",
+        "serverless-http": "^3.2.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
