--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+**/package-lock.json
 node_modules/
 **/node_modules/
 server/node_modules/
 server/node_modules/.bin/
+server/package-lock.json
+package-lock.json
 
 # next.js
 /.next/
