--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-spring/web": "^9.7.5",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "latest",
