--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
+    "react-web-share": "^2.0.2",
     "recharts": "2.15.0",
     "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
